first commit on sqlstorage

--- a/README
+++ b/README
@@ -11,3 +11,5 @@ Requires dc, the unix desktop calculator, as it is much faster than Math::BigInt
 with GMP.
 
 Requires also: BerkeleyDB, Convert::ASN1, Crypt::Rijndael, File::Map
+
+THIS IS WORK IN PROGRESS, PROVIDED WITH ABSOLUTELY NO GUARANTEE WHATSOEVER
