--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Perl implementation of the bitcoin protocol
 
 * bitcoin-related libraries
-* electrum client
+* electrum client (Not Yet Implemented)
 * elliptic curve cryptography in pure perl
 
 Requires v5.14 and beyond, at least because of an extensive use of the 'r'
@@ -10,6 +10,6 @@ modifier in s///
 Requires dc, the unix desktop calculator, as it is much faster than Math::BigInt, even
 with GMP.
 
-Requires also: BerkeleyDB, Convert::ASN1, File::Map
+Requires also: BerkeleyDB, Convert::ASN1, File::Map, Net::IRC
 
 THIS IS WORK IN PROGRESS, PROVIDED WITH ABSOLUTELY NO GUARANTEE WHATSOEVER
