fixing bad test version numbers

--- a/README
+++ b/README
@@ -7,9 +7,8 @@ Perl implementation of the bitcoin protocol
 Requires v5.14 and beyond, at least because of an extensive use of the 'r'
 modifier in s///
 
-Requires dc, the unix desktop calculator, as it is much faster than Math::BigInt, even
-with GMP.
+Can optionaly use dc, the unix desktop calculator, as it is much faster than Math::BigInt, even with GMP.
 
-Requires also: BerkeleyDB, Convert::ASN1, File::Map, Net::IRC
+Requires also: BerkeleyDB, Convert::ASN1, File::Map
 
 THIS IS WORK IN PROGRESS, PROVIDED WITH ABSOLUTELY NO GUARANTEE WHATSOEVER
